--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -273,8 +273,20 @@
 [class*="border-top"] {
   border-top-width: 1px;
 }
-[class*="border-reset"] {
+[class*="border--none"] {
   &, &[class*=popover] .popover-arrow:before {
     border-width: 0px !important;
   }
+}
+[class*="border-bottom--none"] {
+  border-bottom-width: 0px !important;
+}
+[class*="border-left--none"] {
+  border-left-width: 0px !important;
+}
+[class*="border-right--none"] {
+  border-right-width: 0px !important;
+}
+[class*="border-top--none"] {
+  border-top-width: 0px !important;
 }
