--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -79,6 +79,9 @@ img::-moz-selection {
 // Fixes
 // ==========================================================
 
+a {
+  outline: none !important;
+}
 .row {
     .clear-fix;
 }
