--- a/playground/css/playground-theme.less
+++ b/playground/css/playground-theme.less
@@ -37,15 +37,15 @@
     @sBorderIntensity: 5%
 );
 .createSmartSwatch(
-    @sName:            atk-swatch-ink,
+    @sName:            ink,
     @sFill:            #1c2933
 );
 .createSmartSwatch(
-    @sName:            atk-swatch-gray,
+    @sName:            gray,
     @sFill:            #f5f6f7
 );
 .createSmartSwatch(
-    @sName:            atk-swatch-blue,
+    @sName:            blue,
     @sFill:            #0095ff
 );
 
