--- a/playground/includes/header.jade
+++ b/playground/includes/header.jade
@@ -1,29 +1,29 @@
-.atk-layout-row.atk-swatch-ink
-  .atk-layout-cell
-    .atk-wrapper
-      .atk-bar.atk-cells.atk-cells-gutter
-        .atk-cell
-          a.atk-size-mega(href='/')
+.layout-row.swatch-ink
+  .layout-cell
+    .wrapper
+      .bar.cells.cells-gutter
+        .cell
+          a.size-mega(href='/')
             strong Agile
             | &nbsp;
-            span.atk-label.atk-swatch-yellow CSS
-        .atk-cell.atk-jackscrew
-          ul.atk-menu-horizontal
+            span.label.swatch-yellow CSS
+        .cell.expand
+          ul.menu-horizontal
             li
-              a.atk-swatch-ink.atk-padding(href='index.html') Playground
+              a.swatch-ink.padding-all(href='index.html') Playground
             li
-              a.atk-swatch-ink.atk-padding(href='docs/icons.html') Icons
+              a.swatch-ink.padding-all(href='docs/icons.html') Icons
             li
-              a.atk-swatch-ink.atk-padding(href='layouts.html') Layouts
+              a.swatch-ink.padding-all(href='layouts.html') Layouts
             li
-              a.atk-swatch-ink.atk-padding(href='examples.html') Examples
-        .atk-cell.atk-text-right
-          ul.atk-menu-horizontal
+              a.swatch-ink.padding-all(href='examples.html') Examples
+        .cell.text-right
+          ul.menu-horizontal
             li
-              a.atk-swatch-ink.atk-padding(href='https://github.com/atk4/agiletoolkit-css')
+              a.swatch-ink.padding-all(href='https://github.com/atk4/agiletoolkit-css')
                 span.icon-github
                 | &nbsp;GitHub
             li
-              a.atk-swatch-ink.atk-padding(href='https://twitter.com/atk4')
+              a.swatch-ink.padding-all(href='https://twitter.com/atk4')
                 span.icon-twitter
                 | &nbsp;Twitter
