--- a/playground/includes/playground-gridsystem.jade
+++ b/playground/includes/playground-gridsystem.jade
@@ -2,24 +2,24 @@ section#grid-system
   h2 Grid System
   p
     | Our responsive grid system.
-  .atk-row.atk-push-small
-    .atk-col-3
-      .atk-box-small .atk-col-3
-    .atk-col-3
-      .atk-box-small .atk-col-3
-    .atk-col-3
-      .atk-box-small .atk-col-3
-    .atk-col-3
-      .atk-box-small .atk-col-3
-  .atk-row.atk-push-small
-    .atk-col-4
-      .atk-box-small .atk-col-4
-    .atk-col-4
-      .atk-box-small .atk-col-4
-    .atk-col-4
-      .atk-box-small .atk-col-4
-  .atk-row.atk-push-small
-    .atk-col-6
-      .atk-box-small .atk-col-6
-    .atk-col-6
-      .atk-box-small .atk-col-6
+  .row.margin-bottom--s
+    .col-3
+      .box.padding-all--s .col-3
+    .col-3
+      .box.padding-all--s .col-3
+    .col-3
+      .box.padding-all--s .col-3
+    .col-3
+      .box.padding-all--s .col-3
+  .row.margin-bottom--s
+    .col-4
+      .box.padding-all--s .col-4
+    .col-4
+      .box.padding-all--s .col-4
+    .col-4
+      .box.padding-all--s .col-4
+  .row.margin-bottom--s
+    .col-6
+      .box.padding-all--s .col-6
+    .col-6
+      .box.padding-all--s .col-6
