--- a/playground/includes/playground-jqueryui.jade
+++ b/playground/includes/playground-jqueryui.jade
@@ -3,32 +3,32 @@ section#jqueryui
   h3 Dialogs
   p
     | Basic modal&nbsp;
-    span.atk-label.atk-effect-info .ui-dialog
+    span.label.effect-info .ui-dialog
     | &nbsp;with a minimal form in it.
-  .atk-box.atk-inline
-    button#opener.atk-button Open Dialog
+  .box.inline
+    button#opener.button Open Dialog
   #dialog(title='Basic dialog')
-    p.atk-push-small
+    p.margin-bottom--s
       | Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.
-    form.atk-form
-      .atk-push-xsmall
-        input(type='text',class='atk-jackscrew',placeholder="Username")
-      .atk-push-xsmall
-        input(type='password',class='atk-jackscrew',placeholder="Password")
-      button.atk-button.atk-swatch-green.atk-jackscrew Okay
+    form.form
+      .margin-bottom--xs
+        input(type='text',class='jackscrew',placeholder="Username")
+      .margin-bottom--xs
+        input(type='password',class='jackscrew',placeholder="Password")
+      button.button.swatch-green.jackscrew Okay
   p
     | Modal&nbsp;
-    span.atk-label.atk-effect-info .ui-dialog
+    span.label.effect-info .ui-dialog
     | &nbsp;with the&nbsp;
-    span.atk-label.atk-effect-info button
+    span.label.effect-info button
     | &nbsp;option on.
-  .atk-box.atk-inline
-    button#opener2.atk-button Open Dialog with the Button Panel
+  .box.inline
+    button#opener2.button Open Dialog with the Button Panel
   #dialog-buttonpane(title='Dialog with the Panel')
     p
       | Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum.
   h3 Tabs
-  .atk-box
+  .box
     #tabs
       ul
         li
@@ -47,11 +47,11 @@ section#jqueryui
         p
           | Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.
   p
-    span.atk-label.atk-effect-info .ui-tabs
+    span.label.effect-info .ui-tabs
     | &nbsp;widget mixed with&nbsp;
-    span.atk-label.atk-effect-info .atk-padding
+    span.label.effect-info .padding
     | &nbsp;component.
-  .atk-box
+  .box
     #tabs2
       ul
         li
@@ -60,21 +60,21 @@ section#jqueryui
           a(href='#tabs-2') Proin dolor
         li
           a(href='#tabs-3') Aenean lacinia
-      #tabs-1.atk-padding
+      #tabs-1.padding
         p
           | Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.
-      #tabs-2.atk-padding
+      #tabs-2.padding
         p
           | Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.
-      #tabs-3.atk-padding
+      #tabs-3.padding
         p
           | Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.
   p
-    span.atk-label.atk-effect-info .ui-tabs
+    span.label.effect-info .ui-tabs
     | &nbsp;widget mixed with&nbsp;
-    span.atk-label.atk-effect-info .atk-section
+    span.label.effect-info .section
     | &nbsp;component.
-  .atk-box
+  .box
     #tabs3
       ul
         li
@@ -83,21 +83,21 @@ section#jqueryui
           a(href='#tabs-2') Proin dolor
         li
           a(href='#tabs-3') Aenean lacinia
-      #tabs-1.atk-section
+      #tabs-1.section
         p
           | Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.
-      #tabs-2.atk-section
+      #tabs-2.section
         p
           | Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.
-      #tabs-3.atk-section
+      #tabs-3.section
         p
           | Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.
   p
-    span.atk-label.atk-effect-info .ui-tabs
+    span.label.effect-info .ui-tabs
     | &nbsp;widget mixed with&nbsp;
-    span.atk-label.atk-effect-info .atk-box
+    span.label.effect-info .box
     | &nbsp;component.
-  .atk-box
+  .box
     #tabs4
       ul
         li
@@ -106,17 +106,17 @@ section#jqueryui
           a(href='#tabs-2') Proin dolor
         li
           a(href='#tabs-3') Aenean lacinia
-      #tabs-1.atk-box
+      #tabs-1.box
         p
           | Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.
-      #tabs-2.atk-box
+      #tabs-2.box
         p
           | Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.
-      #tabs-3.atk-box
+      #tabs-3.box
         p
           | Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.
   h3 Accordion
-  .atk-box
+  .box
     #accordion
       h3 Section 1
       div
@@ -135,29 +135,29 @@ section#jqueryui
   h3 Datepicker
   p
     | Basic&nbsp;
-    span.atk-label.atk-effect-info .ui-datepicker
+    span.label.effect-info .ui-datepicker
     | &nbsp;widget.
-  .atk-box.atk-inline
-    .atk-form
+  .box.inline.margin-bottom
+    .form
       form
-        .atk-cells.atk-cells-gutter-small
-          .atk-cell
+        .cells.cells-gutter-small
+          .cell
             label(for='datepicker') Date:
-          .atk-cell
+          .cell
             input#datepicker(type='text')
   p
-    span.atk-label.atk-effect-info .ui-datepicker
+    span.label.effect-info .ui-datepicker
     | &nbsp;with year and month dropdowns.
-  .atk-box.atk-inline
-    .atk-form
+  .box.inline
+    .form
       form
-        .atk-cells.atk-cells-gutter-small
-          .atk-cell
+        .cells.cells-gutter-small
+          .cell
             label(for='datepicker2') Date:
-          .atk-cell
+          .cell
             input#datepicker2(type='text')
   h3 Tooltips
-  #example-jqueryui-tooltips.atk-box
+  #example-jqueryui-tooltips.box
     | Lorem ipsum dolor sit amet, consectetur adipisicing elit.&nbsp;
     a(href='#', title='Tooltip Example') Nobis
     | , corrupti, dignissimos voluptatem modi omnis beatae deleniti ipsa&nbsp;
