--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -19,7 +19,7 @@ section#widgets
             img(src='temp/apples.jpg', alt='Apples')
           .cell.jackscrew
             h4 Apples
-            p.push-small
+            p.margin-bottom--s
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
             .actions-large
               a(href='javascript:void(0)')
@@ -33,7 +33,7 @@ section#widgets
             img(src='temp/tomatoes.jpg', alt='Tomatoes')
           .cell.jackscrew
             h4 Tomatoes
-            p.push-small
+            p.margin-bottom--s
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
             .actions-large
               a(href='javascript:void(0)')
@@ -48,7 +48,7 @@ section#widgets
             img(src='temp/bananas.jpg', alt='Bananas')
           .cell.jackscrew
             h4 Bananas
-            p.push-small
+            p.margin-bottom--s
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
             .actions
               a(href='javascript:void(0)')
@@ -62,7 +62,7 @@ section#widgets
             img(src='temp/blueberries.jpg', alt='Blueberries')
           .cell.jackscrew
             h4 Blueberries
-            p.push-small
+            p.margin-bottom--s
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
             .actions-large
               a(href='javascript:void(0)')
@@ -92,28 +92,28 @@ section#widgets
             td
               input(type='checkbox')
             td.text-nowrap Brian O'Connell
-            td.jackscrew.text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
+            td.jackscrew.comment Nullam convallis ipsum nec lacus pharetra congue.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Danny Brown
-            td.jackscrew.text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
+            td.jackscrew.comment Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap John Smith
-            td.jackscrew.text-dimmed Sed varius nulla sodales hendrerit eleifend.
+            td.jackscrew.comment Sed varius nulla sodales hendrerit eleifend.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Satya Nadella
-            td.jackscrew.text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
+            td.jackscrew.comment Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
             td.align-center
               a(href='javascript:void(0)') Edit
   // [Widget] Table: Zebra
@@ -137,28 +137,28 @@ section#widgets
             td
               input(type='checkbox')
             td.text-nowrap Brian O'Connell
-            td.jackscrew.text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
+            td.jackscrew.comment Nullam convallis ipsum nec lacus pharetra congue.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Danny Brown
-            td.jackscrew.text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
+            td.jackscrew.comment Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap John Smith
-            td.jackscrew.text-dimmed Sed varius nulla sodales hendrerit eleifend.
+            td.jackscrew.comment Sed varius nulla sodales hendrerit eleifend.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Satya Nadella
-            td.jackscrew.text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
+            td.jackscrew.comment Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
             td.align-center
               a(href='javascript:void(0)') Edit
   // [Widget] Table: Bordered
@@ -182,28 +182,28 @@ section#widgets
             td
               input(type='checkbox')
             td.text-nowrap Brian O'Connell
-            td.jackscrew.text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
+            td.jackscrew.comment Nullam convallis ipsum nec lacus pharetra congue.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Danny Brown
-            td.jackscrew.text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
+            td.jackscrew.comment Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap John Smith
-            td.jackscrew.text-dimmed Sed varius nulla sodales hendrerit eleifend.
+            td.jackscrew.comment Sed varius nulla sodales hendrerit eleifend.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Satya Nadella
-            td.jackscrew.text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
+            td.jackscrew.comment Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
             td.align-center
               a(href='javascript:void(0)') Edit
   // [Widget] Table: Bordered
@@ -227,28 +227,28 @@ section#widgets
             td
               input(type='checkbox')
             td.text-nowrap Brian O'Connell
-            td.jackscrew.text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
+            td.jackscrew.comment Nullam convallis ipsum nec lacus pharetra congue.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Danny Brown
-            td.jackscrew.text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
+            td.jackscrew.comment Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap John Smith
-            td.jackscrew.text-dimmed Sed varius nulla sodales hendrerit eleifend.
+            td.jackscrew.comment Sed varius nulla sodales hendrerit eleifend.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Satya Nadella
-            td.jackscrew.text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
+            td.jackscrew.comment Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
             td.align-center
               a(href='javascript:void(0)') Edit
   // [Widget] Table: With Expander
@@ -270,20 +270,20 @@ section#widgets
             td.text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
               | &nbsp;Brian O'Connell
-            td.jackscrew.text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
+            td.jackscrew.comment Nullam convallis ipsum nec lacus pharetra congue.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr.table-expander
             td.padding.swatch-gray.text-inherit(colspan='3')
               h4 Compact Form
               form.form.cells-group.cells-gutter-large
-                .cells.push-small
+                .cells.margin-bottom--s
                   .cell.text-nowrap
                     label.input-label
                       strong Input:
                   .cell.jackscrew
                     input(type="text",size="9")
-                .cells.push-small
+                .cells.margin-bottom--s
                   .cell.text-nowrap
                     label.input-label
                       strong Password:
@@ -298,20 +298,20 @@ section#widgets
             td.text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
               | &nbsp;Danny Brown
-            td.jackscrew.text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
+            td.jackscrew.comment Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr.table-expander
             td.padding.swatch-gray.text-inherit(colspan='3')
               h4 Compact Form
               form.form.cells-group.cells-gutter-large
-                .cells.push-small
+                .cells.margin-bottom--s
                   .cell.text-nowrap
                     label.input-label
                       strong Input:
                   .cell.jackscrew
                     input(type="text",size="9")
-                .cells.push-small
+                .cells.margin-bottom--s
                   .cell.text-nowrap
                     label.input-label
                       strong Password:
@@ -326,20 +326,20 @@ section#widgets
             td.text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
               | &nbsp;John Smith
-            td.jackscrew.text-dimmed Sed varius nulla sodales hendrerit eleifend.
+            td.jackscrew.comment Sed varius nulla sodales hendrerit eleifend.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr.table-expander
             td.padding.swatch-gray.text-inherit(colspan='3')
               h4 Compact Form
               form.form.cells-group.cells-gutter-large
-                .cells.push-small
+                .cells.margin-bottom--s
                   .cell.text-nowrap
                     label.input-label
                       strong Input:
                   .cell.jackscrew
                     input(type="text",size="9")
-                .cells.push-small
+                .cells.margin-bottom--s
                   .cell.text-nowrap
                     label.input-label
                       strong Password:
@@ -354,20 +354,20 @@ section#widgets
             td.text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
               | &nbsp;Satya Nadella
-            td.jackscrew.text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
+            td.jackscrew.comment Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr.table-expander
             td.padding.swatch-gray.text-inherit(colspan='3')
               h4 Compact Form
               form.form.cells-group.cells-gutter-large
-                .cells.push-small
+                .cells.margin-bottom--s
                   .cell.text-nowrap
                     label.input-label
                       strong Input:
                   .cell.jackscrew
                     input(type="text",size="9")
-                .cells.push-small
+                .cells.margin-bottom--s
                   .cell.text-nowrap
                     label.input-label
                       strong Password:
@@ -409,28 +409,28 @@ section#widgets
             td
               input(type='checkbox')
             td.text-nowrap Brian O'Connell
-            td.jackscrew.text-dimmed Nullam convallis ipsum nec lacus pharetra congue.
+            td.jackscrew.comment Nullam convallis ipsum nec lacus pharetra congue.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Danny Brown
-            td.jackscrew.text-dimmed Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
+            td.jackscrew.comment Cras faucibus dui eget nunc commodo, vitae condimentum quam pharetra.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap John Smith
-            td.jackscrew.text-dimmed Sed varius nulla sodales hendrerit eleifend.
+            td.jackscrew.comment Sed varius nulla sodales hendrerit eleifend.
             td.align-center
               a(href='javascript:void(0)') Edit
           tr
             td
               input(type='checkbox')
             td.text-nowrap Satya Nadella
-            td.jackscrew.text-dimmed Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
+            td.jackscrew.comment Aliquam rhoncus turpis felis, ac tempor nulla pulvinar id.
             td.align-center
               a(href='javascript:void(0)') Edit
       .box-small.actions.align-center
@@ -614,5 +614,5 @@ section#widgets
   .banner.cells#banner-notification
     .cell.align-center.valign-middle
       .box.inline(style="width:180px")
-        .icon-mail-alt.size-yotta.push-small.text-baseline-reset
+        .icon-mail-alt.size-yotta.margin-bottom--s.text-baseline-reset
         .text-bold.text-lead Verification link sent to your email
