--- a/playground/index.jade
+++ b/playground/index.jade
@@ -13,7 +13,7 @@ html
       .layout-row.layout-expand
         .layout.layout-cell#layout-content
           .layout-column.layout-expand
-            .wrapper.section-large
+            .wrapper.padding-top--l.padding-bottom--l
               include includes/playground-gridsystem
               include includes/playground-typography
               include includes/playground-helpers
